2009-10-20  H.J. Lu  <hongjiu.lu@intel.com>

	PR gas/10775
	* gas/i386/immed64.d: Updated.
	* gas/i386/l1om.d: Likewise.
	* gas/i386/x86-64-disp-intel.d: Likewise.
	* gas/i386/x86-64-disp.d: Likewise.
	* gas/i386/x86_64.d: Likewise.

2009-10-19  Doug Evans  <dje@sebabeach.org>

	* gas/xc16x/shlrol.s: Specify constant shift amount.
	* gas/xc16x/xc16x.exp (do_xc16x_shlrol): Update expected output.

2009-10-18  Vincent Rivière  <vincent.riviere@freesbee.fr>

	* gas/all/weakref1u.d: Exclude more aout targets.
	* gas/m68k/br-isaa.d: Likewise.
	* gas/m68k/br-isab.d: Likewise.
	* gas/m68k/br-isac.d: Likewise.

2009-10-15  Alan Modra  <amodra@bigpond.net.au>

	PR gas/1491
	* gas/macros/dot.s: Don't start macro invocations is first column.
	* gas/macros/dot.l: Update.
	* gas/macros/macros.exp: Run dot test on more targets.

2009-10-13  H.J. Lu  <hongjiu.lu@intel.com>

	PR gas/10740
	* gas/i386/jump.s: Add new tests.
	* gas/i386/jump16.s: Likewise.

	* gas/i386/jump.d: Updated.
	* gas/i386/jump16.d: Likewise.

2009-10-13  Vincent Riviere  <vincent.riviere@freesbee.fr>	

	PR gas/3041
	* gas/m68k/all.exp: Added "p3041data".
	* gas/m68k/p3041.d, gas/m68k/p3041.s: Added tests of weak references
	from text section to all possible sections.
	* gas/m68k/p3041data.d, gas/m68k/p3041data.s: New test. Check weak
	references from data section.

2009-10-08  H.J. Lu  <hongjiu.lu@intel.com>

	PR gas/10704
	* gas/i386/intelok.s: Move 2 PIC tests to ...
	* gas/i386/intelpic.s: Here.

	* gas/i386/intelok.d: Updated.
	* gas/i386/intelpic.d: Likewise.

2009-10-07  H.J. Lu  <hongjiu.lu@intel.com>

	PR gas/10704
	* gas/i386/intelok.s: Add 2 new tests.
	* gas/i386/intelok.d: Updated.

2009-10-02  Peter Bergner  <bergner@vnet.ibm.com>

	* gas/ppc/476.s: New test.
	* gas/ppc/476.d: Likewise.
	* gas/ppc/ppc.exp: Run the 476 test.

2009-10-01  Peter Bergner  <bergner@vnet.ibm.com>

	* gas/ppc/a2.d: Rename "ppca2" to "a2".

2009-09-29  DJ Delorie  <dj@redhat.com>

	* gas/rx: New directory.