@@ -1,0 +1,8 @@
+#objdump: -s -j .data
+#name: .equ definitions
+
+.*: .*
+
+Contents of section .data:
+ 0000 0c000000 08000000 04000000 00000000[ 	]+................[ 	]*
+#pass
