@@ -4,5 +4,5 @@
 .*: .*
 
 Contents of section .data:
- 0000 00000000 0[04]00000[04] 0[08]00000[08] 0[0c]00000[0c][ 	]+................[ 	]*
+ 0000 00000000 04000000 08000000 0c000000[ 	]+................[ 	]*
 #pass
