@@ -3,6 +3,8 @@
 if [istarget z80-*-*] then {
 # test redefinitions
     run_dump_test "redef"
+# test parsing of equ definitions
+    run_dump_test "equ"
 # test parsing of " and '
     run_dump_test "quotes"
 # test suffixes
